<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="ENV" Id="{f05fa44e-a95f-018f-08b9-05c9e705a905}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// ========= XTS Utility Diagnostics =========
	VisuDiag						: FB_VisuXtsDiag;
	fbXtsEnvironment				: FB_TcIoXtsEnvironment;
	fbXtsEnvironmentVisu			: FB_XtsEnvironmentVisu;
	stXtsEnvironmentConfiguration	: ST_XtsEnvironmentConfiguration;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>