<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Mediator" Id="{164d51b4-07ec-0e46-0eb0-392af39d7d3a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Mediator
VAR_INPUT

	MoverArray				: ARRAY [0..GVL.NUM_MOVERS-1] OF POINTER TO Mover;
	
	MoverListArray			: ARRAY [0..GVL.NUM_MOVERLISTS-1] OF POINTER TO MoverList;
	PositionTriggerArray	: ARRAY [0..GVL.NUM_POSITIONTRIGGERS-1] OF POINTER TO PositionTrigger;
	StationArray			: ARRAY [0..GVL.NUM_STATIONS-1] OF POINTER TO Station;
	ZoneArray				: ARRAY [0..GVL.NUM_ZONES-1] OF POINTER TO Zone;
	TrackArray				: ARRAY [0..GVL.NUM_TRACKS] OF POINTER TO Track;	// track 0 is a special absolute case, this makes the array 1 larger than normal	

	GROUP_REF				: AXES_GROUP_REF;
	
END_VAR
VAR_OUTPUT
END_VAR
VAR

	{attribute : hide}
	internalMoverList		: MoverList;
	internalEnvironmentIsReady : BOOL;
	
	// ========= XTS Utility Diagnostics =========
	VisuDiag						: FB_VisuXtsDiag;
	fbXtsEnvironment				: FB_TcIoXtsEnvironment;
	fbXtsEnvironmentVisu			: FB_XtsEnvironmentVisu;
	stXtsEnvironmentConfiguration	: ST_XtsEnvironmentConfiguration;	
	nEnvironmentState				: INT;

	internalEnvironment				: I_TcIoXtsEnvironment;
	internalXPU						: I_TcIoXtsProcessingUnit;
	internalInfoServer				: I_TcIoXtsInfoServer;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="Methods" Id="{0d177045-c92a-0627-14e7-41e4c9da72c3}" />
    <Folder Name="Properties" Id="{d9d81742-b9bd-0437-3780-4a446062d311}" />
    <Method Name="AddMover" Id="{3437c27c-dd7b-0ac3-07a2-d432fc68235a}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD AddMover : BOOL
VAR_INPUT
	
	Mover		: REFERENCE TO Mover;

END_VAR

VAR
	duplicateFound		: BOOL;
	i					: UDINT;
	emptyIDX			: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Check for duplicates

IF __ISVALIDREF( Mover ) THEN
	
	Mover.Mediator			REF= THIS^;

	duplicateFound			:= FALSE;
	
	FOR i := 0 TO SIZEOF( MoverArray ) / SIZEOF( MoverArray[0] ) - 1 DO
		IF MoverArray[i] <> 0 THEN		// verify the element is clear to prevent overwrites
			IF ADR(Mover) = MoverArray[i] THEN
				duplicateFound		:= TRUE;	// this mover is already mediated
			END_IF
		ELSE
			emptyIDX	:= i;	// confirmed oopen array element
		END_IF	
	END_FOR
	
	IF duplicateFound = FALSE THEN
		
		THIS^.MoverArray[emptyIDX]		:= ADR( Mover );	// new mover into empty array element

		// Automatically register the mover with any Position Triggers
		FOR i := 0 TO SIZEOF( PositionTriggerArray ) / SIZEOF( PositionTriggerArray[0] ) - 1 DO
			IF PositionTriggerArray[i] <> 0 THEN
				PositionTriggerArray[i]^.RegisterMover( Mover );
			END_IF			
		END_FOR
		
		// Automatically register the mover with any Zones
		FOR i := 0 TO SIZEOF( ZoneArray ) / SIZEOF( ZoneArray[0] ) - 1 DO
			IF ZoneArray[i] <> 0 THEN
				ZoneArray[i]^.RegisterMover( Mover );
			END_IF
		END_FOR
		
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddMoverList" Id="{fa372345-a99c-01d2-2d94-cc2fd6bab53d}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD AddMoverList : BOOL
VAR_INPUT
	
	MoverList		: REFERENCE TO MoverList;

END_VAR

VAR
	duplicateFound		: BOOL;
	i					: UDINT;
	emptyIDX			: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Check for duplicates
IF __ISVALIDREF( MoverList ) THEN
	
	MoverList.Mediator			REF= THIS^;
	
	duplicateFound				:= FALSE;
	
	FOR i := 0 TO SIZEOF( MoverListArray ) / SIZEOF( MoverListArray[0] ) - 1 DO
		IF MoverListArray[i] <> 0 THEN		// verify the element is clear to prevent overwrites
			IF ADR( MoverList ) = MoverListArray[i] THEN
				duplicateFound		:= TRUE;		// this moverlist is already mediated
			END_IF
		ELSE
			emptyIDX		:= i;		// confirmed open array element
		END_IF
	END_FOR
	
	IF duplicateFound = FALSE THEN
		THIS^.MoverListArray[emptyIDX]		:= ADR( MoverList );
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddPositionTrigger" Id="{37697d0e-c381-0846-3d01-3d7f2d276ad1}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD AddPositionTrigger : BOOL
VAR_INPUT
	
	PositionTrigger		: REFERENCE TO PositionTrigger;

END_VAR

VAR
	duplicateFound		: BOOL;
	i					: UDINT;
	emptyIDX			: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Check for duplicates
IF __ISVALIDREF( PositionTrigger ) THEN
	
	PositionTrigger.Mediator		REF= THIS^;
	
	duplicateFound					:= FALSE;
	
	FOR i := 0 TO SIZEOF( PositionTriggerArray ) / SIZEOF( PositionTriggerArray[0] ) - 1 DO
		IF PositionTriggerArray[i] <> 0 THEN		// verify the element is clear to prevent overwrites
			IF ADR( PositionTrigger ) = PositionTriggerArray[i] THEN
				duplicateFound		:= TRUE;		// this moverlist is already mediated
			END_IF
		ELSE
			emptyIDX		:= i;		// confirmed open array element
		END_IF
	END_FOR
	
	IF duplicateFound = FALSE THEN
		THIS^.PositionTriggerArray[emptyIDX]		:= ADR( PositionTrigger );
		
		// Automatically register all existing movers with the new position trigger
		FOR i := 0 TO SIZEOF( MoverArray ) / SIZEOF( MoverArray[0] ) - 1 DO
			IF MoverArray[i] <> 0 THEN
				THIS^.PositionTriggerArray[emptyIDX]^.RegisterMover( MoverArray[i]^ );
			END_IF
		END_FOR		
		
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddStation" Id="{158bfd8c-35c0-05f6-1398-0d0a087d099a}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD AddStation : BOOL
VAR_INPUT
	
	Station		: REFERENCE TO Station;

END_VAR

VAR
	duplicateFound		: BOOL;
	i					: UDINT;
	emptyIDX			: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Check for duplicates
IF __ISVALIDREF( Station ) THEN
	
	Station.Mediator	REF= THIS^;
	
	duplicateFound		:= FALSE;
	
	FOR i := 0 TO SIZEOF( StationArray ) / SIZEOF( StationArray[0] ) - 1 DO
		IF StationArray[i] <> 0 THEN		// verify the element is clear to prevent overwrites
			IF ADR( Station ) = StationArray[i] THEN
				duplicateFound		:= TRUE;		// this moverlist is already mediated
			END_IF
		ELSE
			emptyIDX		:= i;		// confirmed open array element
		END_IF
	END_FOR
	
	IF duplicateFound = FALSE THEN
		THIS^.StationArray[emptyIDX]		:= ADR( Station );
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddTrack" Id="{1f5fda23-0b4f-059d-05b7-42b4aba73321}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD AddTrack : BOOL
VAR_INPUT
	
	Track		: REFERENCE TO Track;

END_VAR

VAR
	duplicateFound		: BOOL;
	i					: UDINT;
	emptyIDX			: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Check for duplicates
IF __ISVALIDREF( Track ) THEN
	
	Track.Mediator		REF= THIS^;
	
	duplicateFound		:= FALSE;
	
	FOR i := 0 TO SIZEOF( TrackArray ) / SIZEOF( TrackArray[0] ) - 1 DO
		IF TrackArray[i] <> 0 THEN		// verify the element is clear to prevent overwrites
			IF ADR( Track ) = TrackArray[i] THEN
				duplicateFound		:= TRUE;		// this moverlist is already mediated
			END_IF
		ELSE
			emptyIDX		:= i;		// confirmed open array element
		END_IF
	END_FOR
	
	IF duplicateFound = FALSE THEN
		THIS^.TrackArray[emptyIDX]		:= ADR( Track );
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddZone" Id="{b7275e17-ff08-069c-32b8-5e7a13dacb64}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD AddZone : BOOL
VAR_INPUT
	
	Zone		: REFERENCE TO Zone;

END_VAR

VAR
	duplicateFound		: BOOL;
	i					: UDINT;
	emptyIDX			: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Check for duplicates
IF __ISVALIDREF( Zone ) THEN
	
	Zone.Mediator		REF= THIS^;
	
	duplicateFound		:= FALSE;
	
	FOR i := 0 TO SIZEOF( ZoneArray ) / SIZEOF( ZoneArray[0] ) - 1 DO
		IF ZoneArray[i] <> 0 THEN		// verify the element is clear to prevent overwrites
			IF ADR( Zone ) = ZoneArray[i] THEN
				duplicateFound		:= TRUE;		// this moverlist is already mediated
			END_IF
		ELSE
			emptyIDX		:= i;		// confirmed open array element
		END_IF
	END_FOR
	
	IF duplicateFound = FALSE THEN
		THIS^.ZoneArray[emptyIDX]		:= ADR( Zone );
		
		// Automatically register all existing movers with the new zone
		FOR i := 0 TO SIZEOF( MoverArray ) / SIZEOF( MoverArray ) - 1 DO
			IF MoverArray[i] <> 0 THEN
				THIS^.ZoneArray[emptyIDX]^.RegisterMover( MoverArray[i]^ );
			END_IF
		END_FOR
		
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Property Name="CompleteMoverList" Id="{41f8f92e-6d81-02a1-048b-3da9baf27ff9}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY CompleteMoverList : iMoverList]]></Declaration>
      <Get Name="Get" Id="{0ba48769-41e2-05d1-1ed6-465e4a354ad7}">
        <Declaration><![CDATA[VAR
	i: UDINT;
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[internalMoverList.UnregisterAll();

FOR i := 0 TO SIZEOF( MoverArray ) / SIZEOF( MoverArray[0] ) - 1 DO
	IF MoverArray[i] <> 0 THEN
		internalMoverList.RegisterMover( MoverArray[i]^ );
	END_IF
END_FOR

CompleteMoverList	:= internalMoverList;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Cyclic" Id="{f2264867-ad86-0c96-3c42-ade0fe3bf9e2}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD Cyclic : BOOL
VAR_INPUT
END_VAR

VAR
	i: ULINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// Handle all project cyclic calls

FOR i := 0 TO SIZEOF( MoverArray ) / SIZEOF( MoverArray[i] ) - 1 DO
	IF MoverArray[i] <> 0 THEN
		MoverArray[i]^.Cyclic( GROUP_REF );			// could make this ca group addition clener
		MoverArray[i]^.CyclicTrack();
		MoverArray[i]^.AxisReference.ReadStatus();
	END_IF
END_FOR

FOR i := 0 TO SIZEOF( StationArray ) / SIZEOF( StationArray[i] ) - 1 DO
	IF StationArray[i] <> 0 THEN
		StationArray[i]^.Cyclic();
	END_IF
END_FOR

FOR i := 0 TO SIZEOF( PositionTriggerArray ) / SIZEOF( PositionTriggerArray[i] ) - 1 DO
	IF PositionTriggerArray[i] <> 0 THEN
		PositionTriggerArray[i]^.Cyclic();
	END_IF
END_FOR

FOR i := 0 TO SIZEOF( TrackArray ) / SIZEOF( TrackArray[i] ) - 1 DO
	IF TrackArray[i] <> 0 THEN
		TrackArray[i]^.Cyclic();
	END_IF
END_FOR

CyclicEnvironment();]]></ST>
      </Implementation>
    </Method>
    <Method Name="CyclicEnvironment" Id="{bec7bc22-417c-060d-2998-493fbd5e5180}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD CyclicEnvironment : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE nEnvironmentState OF
	0:	// ----------------------------------------- Enable Init Items
	
		// Enable init Info Server if needed
		stXtsEnvironmentConfiguration.bEnableInitInfoServer		:= TRUE;
		
		// Enable init CA Group if needed
		stXtsEnvironmentConfiguration.bEnableInitCaGroup		:= TRUE;
		
		// Set configuration of XtsUtility init
		fbXtsEnvironment.P_XtsEnvironmentConfiguration			:= stXtsEnvironmentConfiguration;
		
		// Next step
		nEnvironmentState	:= 1;
		
	1:	// ------------------------------------------ Init Environment
		
		// Start init
		IF fbXtsEnvironment.Init(TRUE) THEN
			// stop init
			fbXtsEnvironment.Init(FALSE);
			
			// next step
			nEnvironmentState	:= 2;
		END_IF
		
	2:	// ------------------------------------------ Check for success
	
		// Check IsInitialized property
		IF fbXtsEnvironment.P_IsInitialized THEN
			// assign to vars
			internalEnvironment := fbXtsEnvironment;
			internalXPU			:= fbXtsEnvironment.XpuTcIo(1);
			internalInfoServer	:= fbXtsEnvironment.InfoServerTcIo(1);
			// next step
			nEnvironmentState	:= 3;
		END_IF
		
	3:	// ------------------------------------------- Init Visu
	
		fbXtsEnvironmentVisu( ipTcIoXtsEnvironment := fbXtsEnvironment );
		
		// next step
		nEnvironmentState	:= 4;
		
	4:	// ------------------------------------------- Init done

		fbXtsEnvironmentVisu.Cycle();
		
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Property Name="EnvironmentIsReady" Id="{45272fae-93d1-0503-0b16-fd82b7738745}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY EnvironmentIsReady : BOOL]]></Declaration>
      <Get Name="Get" Id="{c1e17dfb-61a0-0ba8-0903-93fde5311796}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[EnvironmentIsReady := fbXtsEnvironment.P_IsInitialized;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Envrionment" Id="{5e5f4ba6-ff8f-0396-2883-6b9b059dc7fd}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Envrionment : I_TcIoXtsEnvironment]]></Declaration>
      <Get Name="Get" Id="{67009401-6b19-0292-3a1b-93904af08df3}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Envrionment := internalEnvironment;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="InfoServer" Id="{816a507a-b5f1-077f-3d31-6cc9a0af8cb5}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY InfoServer : I_TcIoXtsInfoServer]]></Declaration>
      <Get Name="Get" Id="{880f5fd5-5a90-005a-341d-63c8b7f4f011}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[InfoServer := internalInfoServer;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="ResetStatistics" Id="{03455d1c-c490-0e78-3526-b69b05e0917b}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD ResetStatistics : BOOL
VAR
	i					: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// reset statistics at all postion triggers and stations
FOR i := 0 TO GVL.NUM_POSITIONTRIGGERS-1 DO
	PositionTriggerArray[i]^.ResetStatistics();
END_FOR
FOR i := 0 TO GVL.NUM_STATIONS-1 DO
	StationArray[i]^.ResetStatistics();
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Property Name="XPU" Id="{b9694a68-ee0f-0a17-2999-0aade43c6ce4}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY XPU : I_TcIoXtsProcessingUnit]]></Declaration>
      <Get Name="Get" Id="{fb7fa487-baed-05fa-2f8e-e167e0e16d6f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[XPU := internalXPU;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="Mediator">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.AddMover">
      <LineId Id="9" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="20" Count="1" />
      <LineId Id="26" Count="3" />
      <LineId Id="31" Count="1" />
      <LineId Id="22" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="71" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="66" Count="1" />
      <LineId Id="69" Count="1" />
      <LineId Id="68" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.AddMoverList">
      <LineId Id="15" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="3" />
      <LineId Id="25" Count="0" />
      <LineId Id="27" Count="3" />
      <LineId Id="26" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="31" Count="3" />
      <LineId Id="19" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.AddPositionTrigger">
      <LineId Id="18" Count="3" />
      <LineId Id="38" Count="1" />
      <LineId Id="22" Count="14" />
      <LineId Id="52" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="59" Count="1" />
      <LineId Id="58" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.AddStation">
      <LineId Id="36" Count="0" />
      <LineId Id="17" Count="2" />
      <LineId Id="37" Count="1" />
      <LineId Id="20" Count="15" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.AddTrack">
      <LineId Id="17" Count="3" />
      <LineId Id="37" Count="1" />
      <LineId Id="21" Count="15" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.AddZone">
      <LineId Id="17" Count="3" />
      <LineId Id="37" Count="1" />
      <LineId Id="21" Count="14" />
      <LineId Id="51" Count="3" />
      <LineId Id="56" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.CompleteMoverList.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.Cyclic">
      <LineId Id="6" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="44" Count="4" />
      <LineId Id="43" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="55" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.CyclicEnvironment">
      <LineId Id="6" Count="29" />
      <LineId Id="51" Count="3" />
      <LineId Id="36" Count="14" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.EnvironmentIsReady.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.Envrionment.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.InfoServer.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.ResetStatistics">
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="5" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="Mediator.XPU.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>